add support for nodeSelector

--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -17,6 +17,8 @@ spec:
 {{- if .Values.rbac.install }}
       serviceAccountName: acs-engine-autoscaler
 {{- end }}
+      nodeSelector: 
+        beta.kubernetes.io/os: linux
       containers:
       - name: {{ template "fullname" . }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
