--- a/helm-chart/templates/secrets.yaml
+++ b/helm-chart/templates/secrets.yaml
@@ -16,3 +16,4 @@ data:
   etcd-client-private-key: {{ default "MISSING" .Values.acsenginecluster.etcdclientprivatekey | b64enc | quote }}
   etcd-server-private-key: {{ default "MISSING" .Values.acsenginecluster.etcdserverprivatekey | b64enc | quote }}
   subscription-id: {{ default "MISSING" .Values.acsenginecluster.subscriptionid | b64enc | quote }}
+  etcd-peer-private-key-0: {{ default "MISSING" .Values.acsenginecluster.etcdpeerprivatekey0 | b64enc | quote }}
