add etcdpeerprivatekey0 reference to README.md and comment it from values

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -14,8 +14,8 @@ acsenginecluster:
   kubeconfigprivatekey: 
   clientprivatekey: 
   caprivatekey:
-  etcdpeerprivatekey0:
   ## Etcd private keys are needed for acs-engine >= 0.12.0 
+  #etcdpeerprivatekey0:
   #etcdclientprivateKey: 
   #etcdserverprivateKey: 
 
