add a slot to the helm chart values for slack hook

--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -102,6 +102,10 @@ spec:
             - --over-provision 
             - {{ .Values.acsenginecluster.overprovision | quote }}
             {{- end }}
+            {{- if .Values.acsenginecluster.slackhook }}
+            - --slack-hook 
+            - {{ .Values.acsenginecluster.slackhook | quote }}
+            {{- end }}
             - -vvv
         imagePullPolicy: {{ .Values.image.pullPolicy }}
       restartPolicy: Always
