first crack at application insight track scale events

--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -107,7 +107,7 @@ spec:
             - {{ .Values.acsenginecluster.slackhook | quote }}
             {{- end }}
             {{- if .Values.acsenginecluster.appinsightsinstrumentationkey }}
-            - --slack-hook 
+            - --app-insighs-key 
             - {{ .Values.acsenginecluster.appinsightsinstrumentationkey | quote }}
             {{- end }}
             - -vvv
